# Odyssey

./: Dockerfile  README.md  update_bin.sh
.github/workflows/: build_image.yml
odysseus_tree/: Config.in
odysseus_tree/configs/: raspberrypi4_64_ap_defconfig  raspberrypi4_64_tpu_defconfig
odysseus_tree/overlays/rootfs_overlay_tpu/etc/init.d/: S99odysseus-daemon
odysseus_tree/overlays/rootfs_overlay_tpu/etc/udev/rules.d/: 75-usb-ip.rules
odysseus_tree/package/calypso/: calypso.mk
odysseus_tree/package/mqttui/: mqttui.mk
odysseus_tree/package/nermosquitto/: Config.in  nermosquitto.mk
odysseus_tree/package/odysseus-daemon/: Config.in  odysseus-daemon.mk
odysseus_tree/sources/ody-visual/: Cargo.toml
odysseus_tree/sources/ody-visual/src/: lib.rs  main.rs  mqtt_handler.rs  numerical.rs  serverdata.rs  visual.rs
odysseus_tree/sources/tpu_telemetry/telemetry/: publish.py  server_data_pb2.py
odysseus_tree/sources/tpu_telemetry/telemetry/poll_data/: can.py  environment.py  example.py  gps_data.py  halow.py  on_board.py
