[package]
name = "tpu-telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive", "env"] }
gstreamer = "0.23.2"
protobuf = "3.7.1"
rumqttc = "0.24.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sysinfo = "0.32.0"
tokio = { version = "1.41.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.12", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["ansi", "env-filter"] }

[build-dependencies]
protobuf-codegen = "3.7.1"
